# LavaChicken

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compileShaders.sh
.github/workflows/: cmake-multi-platform.yml
src/cpp/: BlackBoard.cpp  BlackBoard.h  Renderer.cpp  Renderer.h  main.cpp  text_formatting.h
